--- a/saytwice.html
+++ b/saytwice.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 <script>
-var word = prompt("Give me a word to say twice")
-console.log(word + " " +word)
+var word = prompt("Give me a word to say twice");
+console.log(word + " " +word);
 </script>
 </body>
 </html>
